added 1 more video

--- a/app/views/static_pages/proofs.html.erb
+++ b/app/views/static_pages/proofs.html.erb
@@ -75,3 +75,21 @@
     </h3>
   </div>
 </div>
+
+
+<div class="row" style="margin-top: 30px;">
+  <p>______________________________________________________________________________________________________________________________________________________</p>
+</div>
+<div class="row" style="margin-top: 30px;"></div>
+
+<div class="row">
+  <div class="center-block">
+    <h3>
+    <%= link_to "https://www.youtube.com/watch?v=d8KXDGQDMEs", :target => "_blank" do %>
+      Answer to AliExpress experts showing them 30 mats quality by tearing 10 mats and showing wrinkles on all 30 mats.
+    <% end %>
+    </h3>
+  </div>
+</div>
+
+
